--- a/main.css
+++ b/main.css
@@ -10,16 +10,19 @@ main {
     border-radius: 20px;
     background-color: white;
     position: relative;
-    margin:  100px 40px 0px 300px;
-    height: 400px;
+    margin:  -500px 40px 0px 200px;
+    height: 600px;
+
 }
 
-.side-image {
+.image-box {
     border-radius: 20px;
     background-color: gray;
     position: relative;
-    margin:  60px 200px 0px 40px;
-    height: 400px;
+    margin:  60px 300px 0px 40px;
+    height: 600px;
+    padding-top: 60px;
+    
 }
 
 button {
@@ -30,3 +33,11 @@ button {
     width: 80px;
     border-radius: 10px;
 }
+
+h2{
+    background-color: gray;
+    height: 300px;
+    margin: 30px 10px;
+    margin-top: 30px;
+}
+
